# SSP2

./: CMakeLists.txt  build.sh  log_output.txt
auth/: adbkey.pem  adbkey.pub  private_key.pem  public_key.pem  rsa_public_key.pem
cmake/: credentials.cmake  credentials.cmake.example
src/: CMakeLists.txt  adb.h  adb_utils.c  adb_utils.h  cgi.cpp  cgi.h  custom_lwip_opts.h  lwipopts.h  main.c  main.cpp  ssi.cpp  ssi.h  tusb_config.h
src/fs/: disconnected_ssi_cgi.shtml  ssi_cgi.shtml
